# dagcal

./: AGENTS.md  CHANGELOG.md  Cargo.toml  LICENSE  README.md  deny.toml
.github/workflows/: gui-release.yml
crates/dagcal-app/: Cargo.toml
crates/dagcal-app/src/: action.rs  completion.rs  draft.rs  formatting.rs  lib.rs  session.rs
crates/dagcal-core/: Cargo.toml
crates/dagcal-core/benches/: engine.rs
crates/dagcal-core/src/: ast.rs  dependency_graph.rs  engine.rs  error.rs  eval.rs  function.rs  id.rs  label.rs  lib.rs  number.rs  parser.rs  persistence.rs  syntax.pest
crates/dagcal-core/src/engine/: compiled.rs  context.rs  dependencies.rs  entry.rs  history.rs  recompute.rs  repository.rs  resolver.rs  results.rs  runtime.rs  store.rs  symbol.rs  target.rs
crates/dagcal-core/tests/: public_api.rs
crates/dagcal-gui/: Cargo.toml
crates/dagcal-gui/src/: app.rs  formatting.rs  lib.rs  main.rs  style.rs  views.rs
crates/dagcal-gui/src/app/: actions.rs  completion.rs  document.rs  draft.rs  effects.rs  file_io.rs  keyboard.rs  tests.rs  windows.rs
crates/dagcal-gui/src/views/: details.rs  dialogs.rs  entries.rs  input.rs  menu.rs
crates/dagcal-repl/: Cargo.toml
crates/dagcal-repl/src/: main.rs
crates/dagcal-tui/: Cargo.toml
crates/dagcal-tui/src/: app.rs  keyboard.rs  lib.rs  main.rs  terminal.rs  views.rs
crates/dagcal-tui/src/app/: actions.rs  formatting.rs  selectors.rs  tests.rs
src/: app.rs  main.rs  tui.rs
