[workspace.package]
edition = "2024"
license = "MIT"
authors = ["Magami Tomoyuki <tmykmgm2@gmail.com>"]
repository = "https://github.com/hesuia/dagcal"
readme = "README.md"


[workspace]
members = [
    "crates/dagcal-core",
    "crates/dagcal-gui",
    "crates/dagcal-repl",
    "crates/dagcal-tui",
]
resolver = "3"
