[workspace.package]
version = "0.5.0"
edition = "2024"
license = "MIT"
authors = ["Magami Tomoyuki <tmykmgm2@gmail.com>"]
repository = "https://github.com/hesuia/dagcal"
readme = "README.md"


[workspace]
members = [
    "crates/dagcal-app",
    "crates/dagcal-core",
    "crates/dagcal-gui",
    "crates/dagcal-repl",
    "crates/dagcal-tui",
]
resolver = "3"

[profile.dist]
inherits = "release"
codegen-units = 1
lto = "fat"
strip = "symbols"

[profile.dist-gui]
inherits = "dist"

[profile.dist-tui]
inherits = "dist"
