[package]
name = "dagcal-app"
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true
repository.workspace = true
readme.workspace = true
description = "Shared UI-agnostic application state for dagcal frontends"

[dependencies]
dagcal-core = { path = "../dagcal-core" }
