[package]
name = "dagcal-core"
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true
repository.workspace = true
readme.workspace = true
description = "Core dependency-graph calculation engine for dagcal"

[dependencies]
num-bigint = "0.4"
num-rational = "0.4"
num-traits = "0.2"
pest = "2.8.6"
pest_derive = "2.8.6"
petgraph = "0.8.3"
serde = { version = "1.0", features = ["derive"] }
thiserror = "2.0"

[dev-dependencies]
criterion = { version = "0.8", features = ["html_reports"] }
serde_json = "1.0"

[[bench]]
name = "engine"
harness = false
