[package]
name = "dagcal-gui"
version = "0.2.1"
edition.workspace = true
license.workspace = true
authors.workspace = true
repository.workspace = true
readme.workspace = true
description = "Graphical user interface frontend for dagcal"
publish = false

[dependencies]
dagcal-core = { path = "../dagcal-core" }
iced = "0.14.0"
iced_aw = "0.14.1"
rfd = "0.15"
serde_json = "1.0"
