[package]
name = "dagcal-gui"
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true
repository.workspace = true
readme.workspace = true
description = "Graphical user interface frontend for dagcal"
publish = false

[dependencies]
dagcal-app = { path = "../dagcal-app" }
iced = { version = "0.14.0", features = ["advanced"] }
iced_aw = "0.14.1"
rfd = "0.15"
serde_json = "1.0"
