[package]
name = "dagcal-repl"
version = "0.1.0"
edition.workspace = true
license.workspace = true
authors.workspace = true
repository.workspace = true
readme.workspace = true
description = "Read-eval-print loop frontend for dagcal"
publish = false

[dependencies]
dagcal-core = { path = "../dagcal-core" }
