[package]
name = "dagcal-tui"
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true
repository.workspace = true
readme.workspace = true
description = "Terminal user interface frontend for dagcal"
publish = false

[dependencies]
crossterm = "0.28"
dagcal-core = { path = "../dagcal-core" }
ratatui = "0.29"
